[gd_scene load_steps=20 format=3 uid="uid://duok380m6jb3v"]

[ext_resource type="Script" uid="uid://2x3timqkujh0" path="res://scripts/game_5/game_5v2.gd" id="1_r0c6g"]
[ext_resource type="Texture2D" uid="uid://d0vxcs6jpwl8e" path="res://assets/texturasgenericas/grey_panel.png" id="2_55mim"]
[ext_resource type="FontFile" uid="uid://b2lderbh3o76w" path="res://assets/fuentes/AtkinsonHyperlegible-Bold.ttf" id="3_55mim"]
[ext_resource type="Texture2D" uid="uid://bfm4s1ycj3tmf" path="res://assets/texturasgenericas/yellow_panel.png" id="3_acn3l"]
[ext_resource type="Texture2D" uid="uid://5el60unpnqtf" path="res://assets/botones_textura/red_button01.png" id="4_r0c6g"]
[ext_resource type="Texture2D" uid="uid://cake3pvtyxtid" path="res://assets/botones_textura/red_button02.png" id="5_pp6oe"]
[ext_resource type="AudioStream" uid="uid://b0bu315iwj81h" path="res://assets/sfxfeedback/Signal Positive Ceramic C.wav" id="6_pp6oe"]
[ext_resource type="AudioStream" uid="uid://c54ocl20jhrqk" path="res://assets/sfxfeedback/Signal Negative Space B.wav" id="7_o65kc"]
[ext_resource type="Texture2D" uid="uid://bdg2pnye1en5f" path="res://assets/texturasgenericas/red_panel.png" id="8_w04rr"]
[ext_resource type="PackedScene" uid="uid://xru2yuflnnye" path="res://scenes/heart_counter/heart_counter.tscn" id="9_5xf7f"]

[sub_resource type="LabelSettings" id="LabelSettings_yqsuj"]
font = ExtResource("3_55mim")
font_size = 70
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55mim"]
bg_color = Color(0.467738, 0.467738, 0.467738, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqsuj"]
bg_color = Color(0.229423, 0.833621, 0.502636, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o65kc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w04rr"]
texture = ExtResource("4_r0c6g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5xf7f"]
texture = ExtResource("5_pp6oe")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_acn3l"]
texture = ExtResource("4_r0c6g")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_37wc1"]
texture = ExtResource("8_w04rr")

[sub_resource type="LabelSettings" id="LabelSettings_ba12e"]
font = ExtResource("3_55mim")
font_size = 70

[node name="game_5" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r0c6g")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -73.0
offset_top = -129.0
offset_right = 93.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_55mim")

[node name="header" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.508
anchor_top = 0.067
anchor_right = 0.508
anchor_bottom = 0.067
offset_left = -432.76
offset_top = -189.76
offset_right = 432.24
offset_bottom = 140.24
texture = ExtResource("3_acn3l")

[node name="Instrucciones" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.504
anchor_top = 0.107
anchor_right = 0.504
anchor_bottom = 0.107
offset_left = -336.88
offset_top = -128.96
offset_right = 333.12
offset_bottom = -40.96
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_55mim")
theme_override_font_sizes/font_size = 60
text = "Escoge el reloj correcto"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DigitalClock" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.504
anchor_top = 0.107
anchor_right = 0.504
anchor_bottom = 0.107
offset_left = -203.88
offset_top = -8.96001
offset_right = 204.12
offset_bottom = 79.04
text = "TIME LABEL"
label_settings = SubResource("LabelSettings_yqsuj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.191
anchor_right = 0.5
anchor_bottom = 0.191
offset_left = -209.0
offset_top = -4.48
offset_right = 192.0
offset_bottom = 59.52
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_55mim")
theme_override_styles/fill = SubResource("StyleBoxFlat_yqsuj")
value = 20.0
show_percentage = false

[node name="Clock1" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.488
anchor_top = 0.252
anchor_right = 0.488
anchor_bottom = 0.252
offset_left = -51.36
offset_top = -22.56
offset_right = -6.36002
offset_bottom = 21.44

[node name="Clock2" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.092
anchor_top = 0.438
anchor_right = 0.092
anchor_bottom = 0.438
offset_left = -80.24
offset_top = -32.64
offset_right = -19.24
offset_bottom = 30.36

[node name="Clock3" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.628
anchor_right = 0.5
anchor_bottom = 0.628
offset_left = -34.0
offset_top = -68.84
offset_right = 24.0
offset_bottom = -5.84003

[node name="volver" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.506
anchor_top = 0.931
anchor_right = 0.506
anchor_bottom = 0.931
offset_left = -148.32
offset_top = -55.6799
offset_right = 143.68
offset_bottom = 66.3201
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_55mim")
theme_override_font_sizes/font_size = 80
theme_override_styles/focus = SubResource("StyleBoxTexture_o65kc")
theme_override_styles/hover = SubResource("StyleBoxTexture_w04rr")
theme_override_styles/pressed = SubResource("StyleBoxTexture_5xf7f")
theme_override_styles/normal = SubResource("StyleBoxTexture_acn3l")
text = "Volver"

[node name="positivo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_pp6oe")

[node name="negativo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_o65kc")

[node name="pantallaresumen" type="Node" parent="."]

[node name="backgroundResumen" type="TextureRect" parent="pantallaresumen"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -156.0
offset_right = 80.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_55mim")

[node name="textoResumen" type="Label" parent="pantallaresumen"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -128.5
offset_right = 200.0
offset_bottom = 128.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_55mim")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxTexture_37wc1")
text = "Puntaje:"
label_settings = SubResource("LabelSettings_ba12e")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeartCounter" parent="." instance=ExtResource("9_5xf7f")]
position = Vector2(594, 273)

[connection signal="pressed" from="volver" to="." method="_on_volver_pressed"]
